--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hola Coursera</title>
 </head>
 <body>
-<h1>Hola Coursera es un gran Curso</h1>
+<h1>Hola Coursera es un gran Curso...</h1>
 </body>
 </html>
